@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-08-02
+2014-01-07 Andy Salnikov
+- regenerate whole thing from psddldata V01-00-01 with psddl V00-13-02
+- fix for Acqiris::TdcData writing
+
 Tag: V00-08-01
 2013-12-23 Andy Salnikov
 - camera.cpp: failed to compile with gcc47, was OK for older compilers
